# docs/swagger.json
@@ -154,8 +154,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "Name of the CSV file",
-                        "name": "filename",
+                        "description": "Name of the site",
+                        "name": "siteName",
                         "in": "query",
                         "required": true
                     }
